-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
6.7
-
None
"configure -unity-build" is broken after commit https://codereview.qt-project.org/c/qt/qtbase/+/491119 on Windows.
Configure script:
../qt5/configure -release -force-debug-info -optimize-size -c++std c++20 ^ -static -unity-build -feature-relocatable -prefix "%~dp0static" ^ -opensource -confirm-license ^ ^ -nomake examples -nomake tests ^ ^ -submodules qtbase ^ ^ -skip qt3d -skip qt5compat -skip qtactiveqt -skip qtandroidextras ^ -skip qtcanvas3d -skip qtcharts -skip qtconnectivity -skip qtdatavis3d ^ -skip qtdeclarative -skip qtdoc -skip qtfeedback ^ -skip qtgamepad -skip qtgraphicaleffects -skip qtgrpc -skip qtimageformats ^ -skip qtlocation -skip qtlottie -skip qtmacextras ^ -skip qtmultimedia -skip qtnetworkauth -skip qtpim -skip qtpurchasing ^ -skip qtqa -skip qtquick3d -skip qtquickcontrols -skip qtquickcontrols2 ^ -skip qtquicktimeline -skip qtremoteobjects -skip qtrepotools -skip qtscxml ^ -skip qtsensors -skip qtserialbus -skip qtserialport -skip qtshadertools ^ -skip qtspeech -skip qtsvg -skip qtsystems -skip qttools -skip qttranslations ^ -skip qtvirtualkeyboard -skip qtwayland -skip qtwebchannel -skip qtwebengine ^ -skip qtwebglplugin -skip qtwebsockets -skip qtwebview ^ -skip qtwinextras -skip qtx11extras -skip qtxmlpatterns ^ ^ -no-feature-columnview -no-feature-commandlinkbutton ^ -no-feature-concatenatetablesproxymodel ^ -no-feature-concurrent -no-feature-datawidgetmapper -no-feature-dial ^ -no-feature-dockwidget -no-feature-filesystemwatcher -no-feature-fontcombobox ^ -no-feature-fontdialog -no-feature-inputdialog ^ -no-feature-hijricalendar -no-feature-identityproxymodel ^ -no-feature-islamiccivilcalendar -no-feature-jalalicalendar ^ -no-feature-itemmodeltester -no-feature-lcdnumber -no-feature-listwidget ^ -no-feature-mdiarea -no-feature-movie -no-feature-pdf -no-feature-picture ^ -no-feature-printsupport -no-feature-raster-64bit ^ -no-feature-textbrowser -no-feature-textodfwriter ^ -no-feature-undocommand -no-feature-undogroup -no-feature-undostack -no-feature-undoview ^ -no-feature-whatsthis -no-feature-wizard ^ ^ -no-feature-style-android -no-feature-style-mac -no-feature-style-windowsvista ^ ^ -no-feature-mimetype-database -no-feature-sql ^ ^ -no-feature-getifaddrs -no-feature-ipv6ifname -no-feature-libproxy ^ -no-feature-openssl -no-feature-openssl-hash ^ -schannel -ssl -no-feature-sctp -no-feature-socks5 ^ -no-feature-networkproxy -no-feature-networkdiskcache ^ -no-feature-dnslookup -no-feature-sspi -no-feature-networklistmanager ^ ^ -no-opengl -no-feature-opengl -no-feature-dynamicgl -no-feature-directfb ^ ^ -no-feature-gif -no-feature-jpeg ^ ^ -no-feature-androiddeployqt -no-feature-dbus -no-feature-macdeployqt ^ -no-feature-vkgen -no-feature-vulkan -no-feature-windeployqt
Compiler command:
cmake --build . --parallel
The output:
... C:\Program Files (x86)\Windows Kits\10\include\10.0.22621.0\um\shobjidl.h(52): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int C:\Program Files (x86)\Windows Kits\10\include\10.0.22621.0\um\shobjidl.h(52): error C2146: syntax error: missing ';' before identifier 'IQueryCodePage' ...
Build log is attached as build_log.zip.
It looks like some #define is cleared some part of the following line in the "shobjidl.h":
typedef interface IQueryCodePage IQueryCodePage;